# mt-evaluation-framework

./: .pre-commit-config.yaml  README.md  pyproject.toml
example/: flores_eng_ukr_minor.csv  source.csv
mt_evaluation/: app.py  file_utils.py  logger.py  main.py  metrics_utils.py  sentence_utils.py
