[tool.poetry]
name = "mt-evaluation-framework"
version = "0.1.0"
description = "MT Evaluation Framework. Helps researchers & engineers evaluate their "
authors = ["Nikita Trynus <trynuspoc@gmail.com>"]
readme = "README.md"
packages = [{include = "mt_evaluation"}]

[tool.poetry.dependencies]
python = "^3.10"
ctranslate2 = "^3.22.0"
evaluate = "^0.4.1"
typer = "^0.9.0"
typing-extensions = "^4.8.0"
sentencepiece = "^0.1.99"
pydantic = "^2.5.2"
nltk = "^3.8.1"
sacrebleu = "^2.3.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"
pre-commit = "^3.5.0"
isort = "^5.12.0"
mypy = "^1.7.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
mt-evaluation = "mt_evaluation.app:app"
