[project]
name = "mt-evaluation-framework"
version = "0.2.0"
description = "MT Evaluation Framework. Helps researchers & engineers evaluate mt results"
authors = [
    { name = "Nikita Trynus", email = "trynuspoc@gmail.com" }
]
readme = "README.md"
requires-python = ">= 3.10"
dependencies = [
    "evaluate>=0.4.3",
    "typer>=0.12.5",
    "typing-extensions>=4.12.2",
    "pydantic>=2.9.2",
    "sacrebleu>=2.4.3",
    "ctranslate2[translate]>=4.5.0",
    "nltk>=3.9.1",
    "unbabel-comet>=2.2.2",
    "bert-score>=0.3.13",
]

[tool.rye]
dev-dependencies = [
    "ruff>=0.7.0",
    "pre-commit>=4.0.1",
    "mypy>=1.13.0",
]

[tool.rye.scripts]
evaluate = { cmd = ["python", "mt_evaluation/main.py", "evaluate-file"] }

